--- a/dlewis46.gradle
+++ b/dlewis46.gradle
@@ -8,13 +8,13 @@ dependencies {
 }
 
 //Set up some variables (properties)
-sourceCompatibility = 1.7
+sourceCompatibility = 1.8
 version = '1.0'
 
 //Define the contents of the jar file
 jar {
     manifest {
-        attributes 'Implementation-Title': 'Gradle Diego', 'Implementation-Version': version , 'Main-Class' : ‘edu.gatech.oad.antlab.pkg1.AntLabMain’, ‘Class-Path” : ‘../../lib.resources.jar’
+        attributes 'Implementation-Title': 'Gradle Diego', 'Implementation-Version': version , 'Main-Class' : ‘edu.gatech.oad.antlab.pkg1.AntLabMain’, ‘Class-Path’ : ‘../../lib.resources.jar’
     }
 }
 
