--- a/rvazquez8.gradle
+++ b/rvazquez8.gradle
@@ -16,7 +16,7 @@ version = '1.0'
 //Define the contents of the jar file
 jar {
     manifest {
-        attributes 'Implementation-Title': 'Gradle Ryan', 'Implementation-Version': version , 'Main-Class' : 'edu.gatech.oad.antlab.pkg1.AntLabMain', 'Class-Path' : '../../lib.resources.jar'
+        attributes 'Implementation-Title': 'Gradle Ryan', 'Implementation-Version': version , 'Main-Class' : 'edu.gatech.oad.antlab.pkg1.AntLabMain', 'Class-Path' : '../../lib/resources.jar'
     }
 }
 
