--- a/dlewis46.gradle
+++ b/dlewis46.gradle
@@ -4,7 +4,7 @@ apply plugin: 'java'
 
 
 dependencies {
-    compile files(‘lib/resources.jar’)
+	compile files(‘lib/resources.jar’)
 }
 
 //Set up some variables (properties)
@@ -14,7 +14,10 @@ version = '1.0'
 //Define the contents of the jar file
 jar {
     manifest {
-        attributes 'Implementation-Title': 'Gradle Diego', 'Implementation-Version': version , 'Main-Class' : ‘edu.gatech.oad.antlab.pkg1.AntLabMain’, ‘Class-Path’ : ‘..\..\lib.resources.jar’
+        attributes 'Implementation-Title': 'Gradle Diego', 'Implementation-Version': version , 'Main-Class' : ‘edu.gatech.oad.antlab.pkg1.AntLabMain’, ‘Class-Path’ : ‘../../lib/resources.jar’
     }
 }
 
+repositories {
+    mavenCentral()
+}
