--- a/jchen428.gradle
+++ b/jchen428.gradle
@@ -18,7 +18,7 @@ sourceCompatibility = 1.8
 version = '1.0'
 jar {
     manifest {
-        attributes 'Implementation-Title': 'Test Build', 'Implementation-Version': version
+        attributes 'Implementation-Title': 'Jesse Chen Gradle', 'Implementation-Version': version , 'Main-Class' : 'edu.gatech.oad.antlab.pkg1.AntLabMain', 'Class-Path' : '../../lib/resources.jar'
     }
 }
 
